--- a/View/CSS/dashboard.css
+++ b/View/CSS/dashboard.css
@@ -1,15 +1,3 @@
-
-
-/*Estilo de Ordenes*/
-.CuadroOrdenes{
-    padding: 0;
-    margin: 0;
-    background-color: rgb(85, 179, 255);
-    box-shadow: 2px 2px 3px rgb(117, 117, 117);
-    grid-column-start: 1;
-    grid-column-end:3;
-}
-
 .cuadro_hijo01{
     display: grid;
     grid-template-columns:2fr 1fr;
@@ -40,67 +28,68 @@
     opacity: 0.2;
 }
 
-.CuadroOrdenes .cuadro_hijo02{
+.LineaFinal{
     color: rgb(255, 255, 255);
     text-align: center;
     font-weight: 400;
-    background-color: rgb(48, 162, 255);
     width: 100%;
     padding: 0.2vw;
 }
 
-/*Estilo Tasa de Rebotes*/
-.CuadroTasaRebote{
+/*Estilo Actividades Registradas*/
+
+.CuadroActividadesRegistradas{
     padding: 0;
     margin: 0;
-    background-color: rgb(50, 199, 74);
+    background-color: rgb(85, 179, 255);
     box-shadow: 2px 2px 3px rgb(117, 117, 117);
 }
 
-.CuadroTasaRebote .cuadro_hijo02{
-    color: rgb(255, 255, 255);
-    text-align: center;
-    font-weight: 400;
-    background-color: rgb(37, 175, 78);
-    width: 100%;
-    padding: 0.2vw;
+.CuadroActividadesRegistradas .LineaFinal{
+    background-color: rgb(48, 162, 255);
 }
 
+/*Estilo Actividades Iniciadas*/
+.CuadroActividadesIniciadas{
+    padding: 0;
+    margin: 0;
+    box-shadow: 2px 2px 3px rgb(117, 117, 117);
+}
 
 /*Cuadro del numero de Usuarios Registrados*/
-.CuadroRegistrados{
+.CuadroUsuariosRegistrados{
     padding: 0;
     margin: 0;
     background-color: rgb(212, 105, 34);
     box-shadow: 2px 2px 3px rgb(117, 117, 117);
 }
 
-.CuadroRegistrados .cuadro_hijo02{
-    color: rgb(255, 255, 255);
-    text-align: center;
-    font-weight: 400;
+.CuadroUsuariosRegistrados .LineaFinal{
     background-color: rgb(194, 100, 37);
-    width: 100%;
-    padding: 0.2vw;
 }
 
-/*Estilo del numero de visitantes*/
-.CuadroVisitantes{
+/*Estilo Actividades Suspendidas*/
+.CuadroActividadesSuspendidas{
     padding: 0;
     margin: 0;
     background-color: rgb(194, 24, 24); 
     box-shadow: 2px 2px 3px rgb(117, 117, 117);
-    grid-column-start: 1;
-    grid-column-end: 2.5;
 }
 
-.CuadroVisitantes .cuadro_hijo02{
-    color: rgb(255, 255, 255);
-    text-align: center;
-    font-weight: 400;
+.CuadroActividadesSuspendidas .LineaFinal{
     background-color: rgb(173, 15, 15);
-    width: 100%;
-    padding: 0.2vw;
+}
+
+/*Estilo Actividades en Proceso*/
+.CuadroActividadesProceso{
+    padding: 0;
+    margin: 0;
+    background-color: rgb(207, 178, 10); 
+    box-shadow: 2px 2px 3px rgb(117, 117, 117);
+}
+
+.CuadroActividadesProceso .LineaFinal{
+    background-color: rgb(190, 164, 16); 
 }
 
 h2{
