--- a/View/CSS/MenuDelizante.css
+++ b/View/CSS/MenuDelizante.css
@@ -15,19 +15,38 @@
 	list-style:none;
 	margin: 0;
 	padding: 0;
+	padding-top: 10px;
 
 }
 
 /* enlaces del menu */
 #menuLateral ul a{
-	display:block;
 	font-size:15px;
 	font-family: 'Source Sans Pro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	text-decoration: none;
 	font-weight: 600;
 	color:#000000;
-	padding: 15px;
 	opacity: 0.7;
+	padding: 15px 10px 15px 10px;
+}
+#menuLateral ul a span{
+	padding-top: 2px;
+}
+
+#menuLateral ul li div{
+	padding: 0;
+	margin-bottom: 0px;
+}
+
+#menuLateral ul li figure{
+	margin-right: 10px;
+	margin-bottom: 0px;
+}
+
+.icons-menudeslizante{
+	height: 20px;
+	width: 20px;
+	margin-bottom: 0px;
 }
 
 /* items del menu */
