--- a/View/Resources/Imagenes/`.htm
+++ b/View/Resources/Imagenes/`.htm
@@ -5,7 +5,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 -->
 <html><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <meta charset="utf-8">
+    <meta charset="UTF-8"><link rel="icon" href="../favicon.ico" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>&lt;br /&gt;
 &lt;font size='1'&gt;&lt;table class='xdebug-error xe-warning' dir='ltr'
