--- a/View/CSS/MenuDelizante.css
+++ b/View/CSS/MenuDelizante.css
@@ -1,7 +1,8 @@
+@import url(Variables.css);
 #menuLateral{
-    margin-top:109px;
+    margin-top:14.5vh;
     background-color: rgb(255, 255, 255);
-    width: 250px;
+    width: 18vw;
     position: fixed;
     left: 0;
     height: 100%;
@@ -21,7 +22,7 @@
 
 /* enlaces del menu */
 #menuLateral ul a{
-	font-size:15px;
+	font-size:1vw;
 	font-family: 'Source Sans Pro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	text-decoration: none;
 	font-weight: 600;
@@ -56,11 +57,7 @@
 	margin:0px;
 	padding:0px;
 	float:none;
-}
-/* efecto al pasar el ratón por los items del menu */
-#menuLateral ul li:hover{
-	background:rgb(219, 219, 219);
-
+	border-bottom:rgb(255, 255, 255) 2px solid;
 }
 
 #menuLateral ul ul{
@@ -79,6 +76,19 @@
 
 }
 
+/* efecto al pasar el ratón por los items del menu */
+#menuLateral ul li:hover{
+	transition: all 0.2s ease-in-out;
+	background:rgb(219, 219, 219);
+	border-color:var(--ColorCabecera);
+}
+
+#menuLateral ul li div:hover{
+	transition: all 0.4s;
+	transform: scale(1.1);
+	transform: translate(10px);
+}
+
 #menuLateral ul li:hover> ul{
 	display:block;
 }
@@ -91,17 +101,24 @@
 
 
 /*Marca la pagina en la que estas en el menu deslizante*/
+
 .marca{
 	background:rgb(219, 219, 219);
 }
 
-@media screen and (max-width: 600px){
+@media screen and (max-width: 800px){
 	#menuLateral{
-		width:150px;
+		width:160px;
 	}
 	#menuLateral ul a{
-		display:block;
-		font-size:10px;
+		font-size: 10px;
 	}
-	
+}
+
+@media screen and ((max-height: 500px)) {
+    
+	#menuLateral{
+		margin-top:70px;
+		overflow-y: scroll;
+	}
 }
